# ChessToolkit

./: .gitignore  CMakeLists.txt  rebuild.bat  settings.json
docs/diagrams/src/: ClassDiagram.puml
include/: Application.h  Board.h  CastlingRights.h  ChessGame.h  ChessGameImpl.h  ChessVariant.h  ClassicChessCanvas.h  ClassicChessDrawer.h  ClassicGameData.h  ClassicGameLogic.h  ClickAction.h  ClickHandler.h  Color.h  Contexts.h  Coordinates.h  Defaulter.h  DrawingCanvas.h  FEN.h  FileConverter.h  GameResult.h  GameStatus.h  IChessBoard.h  IElement.h  IGameData.h  IGameLogic.h  ISquare.h  KeyboardAction.h  KeyboardHandler.h  MatrixBoard.h  MenuContext.h  Move.h  MoveFactory.h  Piece.h  PiecesImages.h  Position.h  RenderThread.h  ResourceManager.h  TexturesName.h
include/variants/Classic/: ClassicChessGame.h  ClassicChessGameImpl.h
include/variants/Classic/data/: ClassicConstants.h  ClassicGameData.h  ClassicMove.h  ClassicMoveConstruct.h  ClassicMoveRecord.h
src/: Application.cpp  Board.cpp  CastlingRights.cpp  ChessGame.cpp  ChessGameImpl.cpp  ClassicChessCanvas.cpp  ClassicChessData.cpp  ClassicChessDrawer.cpp  ClassicGameLogic.cpp  ClickAction.cpp  ClickHandler.cpp  Defaulter.cpp  DrawingCanvas.cpp  FEN.cpp  FileConverter.cpp  GameResult.cpp  GameStatus.cpp  KeyboardAction.cpp  KeyboardHandler.cpp  MatrixBoard.cpp  MenuContext.cpp  Move.cpp  MoveFactory.cpp  Piece.cpp  PiecesImages.cpp  Position.cpp  RenderThread.cpp  ResourceManager.cpp  main.cpp
src/variants/Classic/: ClassicChessGame.cpp  ClassicChessGameImpl.cpp
src/variants/Classic/data/: ClassicMove.cpp  (+3 more)
(+9 files in other folders)
